Remove share function

--- a/www/index.html
+++ b/www/index.html
@@ -60,7 +60,18 @@
             });
             $(window).load(function () {
                 initialize();
-            });            
+            });
+//            $(document).on('pagebeforeshow', '[data-role="page"]', function () {
+//                setTimeout(function () {
+//                    $.mobile.loading('show');
+//                }, 1);
+//            });
+//
+//            $(document).on('pageshow', '[data-role="page"]', function () {
+//                setTimeout(function () {
+//                    $.mobile.loading('hide');
+//                }, 300);
+//            });
 
         </script>
         <script async defer src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false">
