--- a/www/index.html
+++ b/www/index.html
@@ -10,25 +10,63 @@
         <script src="js/libs/jquery.mobile-1.4.5.min.js" type="text/javascript"></script>
         <link href="css/master.css" rel="stylesheet" type="text/css"/>
         <link href="css/libs/normalize.css" rel="stylesheet" type="text/css"/>
+        <link href="css/libs/jquery.dropdown.min.css" rel="stylesheet" type="text/css"/>
+
         <script src="js/libs/modernizr.custom.js" type="text/javascript"></script>
+        <script src="js/libs/jquery.dropdown.min.js" type="text/javascript"></script>
         <title>Scholarship</title>
     </head>
     <body>
         <div data-role="page" id="page-home">
             <header class="header-title">
                 <nav class="menu-header">
-                    <h1 id="header-title" class="h1-header toLeft">សាកលវិទ្យាល័យ</h1>
+                    <h1 id="header-title" class="header-title-h2 h1-header toLeft">សកលវិទ្យាល័យ</h1>
                     <ul class="toRight menu-header-svg" style="padding: 0; margin: 0;">
                         <li>
-                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                                 width="50px" height="50px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
-                            <path d="M296,136c0-22.002-17.998-40-40-40s-40,17.998-40,40s17.998,40,40,40S296,158.002,296,136z M296,376
-                                  c0-22.002-17.998-40-40-40s-40,17.998-40,40s17.998,40,40,40S296,398.002,296,376z M296,256c0-22.002-17.998-40-40-40
-                                  s-40,17.998-40,40s17.998,40,40,40S296,278.002,296,256z"/>
-                            </svg>
+                            <a href="#" data-jq-dropdown="#jq-dropdown-1">
+                                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                     width="50px" height="50px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
+                                <path d="M296,136c0-22.002-17.998-40-40-40s-40,17.998-40,40s17.998,40,40,40S296,158.002,296,136z M296,376
+                                      c0-22.002-17.998-40-40-40s-40,17.998-40,40s17.998,40,40,40S296,398.002,296,376z M296,256c0-22.002-17.998-40-40-40
+                                      s-40,17.998-40,40s17.998,40,40,40S296,278.002,296,256z"/>
+                                </svg>
+                            </a>
                         </li>
                     </ul>
                 </nav>
+                <div id="jq-dropdown-1" class="jq-dropdown" style="background: #432677; width: 100%; height: 100vh; top: 0 !important; left: 0 !important;">
+                    <div>
+                        <nav class="menu-header">
+                            <h1 class="header-title-h2 h1-header toLeft">សកលវិទ្យាល័យ</h1>
+                            <ul class="toRight menu-header-svg" style="padding: 0; margin: 0;">
+                                <li>
+                                    <a href="#" data-jq-dropdown="#">
+                                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                             width="50px" height="50px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                                        <path d="M437.5,386.6L306.9,256l130.6-130.6c14.1-14.1,14.1-36.8,0-50.9c-14.1-14.1-36.8-14.1-50.9,0L256,205.1L125.4,74.5
+                                              c-14.1-14.1-36.8-14.1-50.9,0c-14.1,14.1-14.1,36.8,0,50.9L205.1,256L74.5,386.6c-14.1,14.1-14.1,36.8,0,50.9
+                                              c14.1,14.1,36.8,14.1,50.9,0L256,306.9l130.6,130.6c14.1,14.1,36.8,14.1,50.9,0C451.5,423.4,451.5,400.6,437.5,386.6z"/>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div style="text-align: left;
+                         position: absolute;
+                         width: 1140px;
+                         top: 50%;
+                         left: 50%;
+                         -webkit-transform: translate(-50%, -50%);
+                         -ms-transform: translate(-50%, -50%);
+                         transform: translate(-50%, -50%);">
+                        <ul style="  list-style: none; text-align: center; font-size: 2em;">
+                            <li><a href="#" style="line-height: 2em;display:block;">អំពីពួកយើង</a></li>
+                            <!--<li><a href="#" style="line-height: 2em;display:block;">អ្នកបង្កើត</a></li>-->
+                            <li><a href="#" onclick="exitFromApp()" style="line-height: 2em;display:block;">ចាកចេញ</a></li>
+                        </ul>
+                    </div>
+                </div>
             </header>
             <div class="container">
                 <div id="list-university" class="tab-content current"></div>
@@ -49,10 +87,8 @@
             $(document).ready(function () {
                 $('ul.tabs li').click(function () {
                     var tab_id = $(this).attr('data-tab');
-
                     $('ul.tabs li').removeClass('current');
                     $('.tab-content').removeClass('current');
-
                     $(this).addClass('current');
                     $("#" + tab_id).addClass('current');
                 });
@@ -61,18 +97,6 @@
             $(window).load(function () {
                 initialize();
             });
-//            $(document).on('pagebeforeshow', '[data-role="page"]', function () {
-//                setTimeout(function () {
-//                    $.mobile.loading('show');
-//                }, 1);
-//            });
-//
-//            $(document).on('pageshow', '[data-role="page"]', function () {
-//                setTimeout(function () {
-//                    $.mobile.loading('hide');
-//                }, 300);
-//            });
-
         </script>
         <script async defer src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false">
         </script>
@@ -106,6 +130,9 @@
                 $.support.cors = true;
                 $.mobile.allowCrossDomainPages = true;
             });
+            function exitFromApp() {
+                navigator.app.exitApp();
+            }
             //            $(document).on("pagebeforeshow", "#page-home", function () {
             //                $("#search-container").hide();
             //            });
