--- a/www/index.html
+++ b/www/index.html
@@ -51,18 +51,11 @@
                             </ul>
                         </nav>
                     </div>
-                    <div style="text-align: left;
-                         position: absolute;
-                         width: 1140px;
-                         top: 50%;
-                         left: 50%;
-                         -webkit-transform: translate(-50%, -50%);
-                         -ms-transform: translate(-50%, -50%);
-                         transform: translate(-50%, -50%);">
-                        <ul style="  list-style: none; text-align: center; font-size: 2em;">
-                            <li><a href="#" style="line-height: 2em;display:block;">អំពីពួកយើង</a></li>
+                    <div class="menu-item-wrapper">
+                        <ul>
+                            <li><a href="#">អំពីពួកយើង</a></li>
                             <!--<li><a href="#" style="line-height: 2em;display:block;">អ្នកបង្កើត</a></li>-->
-                            <li><a href="#" onclick="exitFromApp()" style="line-height: 2em;display:block;">ចាកចេញ</a></li>
+                            <li><a href="#" onclick="exitFromApp()">ចាកចេញ</a></li>
                         </ul>
                     </div>
                 </div>                
