--- a/www/index.html
+++ b/www/index.html
@@ -133,19 +133,6 @@
 
             </div>
         </div>
-        <script type="text/javascript">
-            $(document).ready(function () {
-                $('ul.tabs li').click(function () {
-                    var tab_id = $(this).attr('data-tab');
-                    $('ul.tabs li').removeClass('current');
-                    $('.tab-content').removeClass('current');
-                    $(this).addClass('current');
-                    $("#" + tab_id).addClass('current');
-                });
-            });
-            $(window).load(function () {
-                initialize();
-            });</script>
         <script async defer src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false">
         </script>
         <script src="js/libs/map.js" type="text/javascript"></script>
@@ -174,6 +161,9 @@
         <script src="js/app/view/university_view.js" type="text/javascript"></script>
         <script type="text/javascript">
             App.onDeviceReady();
+            $(window).load(function () {
+                App.initialize();
+            });  
             $(document).on("mobileinit", function () {
                 $.support.cors = true;
                 $.mobile.allowCrossDomainPages = true;
@@ -181,19 +171,15 @@
             function exitFromApp() {
                 navigator.app.exitApp();
             }
-            //            $(document).on("pagebeforeshow", "#page-home", function () {
-            //                $("#search-container").hide();
-            //            });
-            //            $("#search-button").on("click", function () {
-            //                $("#search-container").slideToggle("fast");
-            //                $(".search-class").focus();
-            //                if ($("#search-container").is(':hidden')) {
-            //                    $(".search-class").focus();
-            //                } else {
-            //                    $(".search-class").val("");
-            //                    $(".search-class").focus();
-            //                }
-            //            });
+            $(document).ready(function () {
+                $('ul.tabs li').click(function () {
+                    var tab_id = $(this).attr('data-tab');
+                    $('ul.tabs li').removeClass('current');
+                    $('.tab-content').removeClass('current');
+                    $(this).addClass('current');
+                    $("#" + tab_id).addClass('current');
+                });
+            });
         </script>
     </body>
 </html>
