--- a/www/index.html
+++ b/www/index.html
@@ -5,12 +5,13 @@
         <!--<meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *">-->
         <meta name="format-detection" content="telephone=no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+        <link href="css/master.css" rel="stylesheet" type="text/css"/>
         <link href="css/libs/jquery.mobile-1.4.5.min.css" rel="stylesheet" type="text/css"/>
         <script src="js/libs/jquery-1.11.3.min.js" type="text/javascript"></script>
         <script src="js/libs/jquery.mobile-1.4.5.min.js" type="text/javascript"></script>
         <link href="css/libs/normalize.css" rel="stylesheet" type="text/css"/>
         <link href="css/libs/jquery.dropdown.min.css" rel="stylesheet" type="text/css"/>
-        <link href="css/master.css" rel="stylesheet" type="text/css"/>
+        <!--<link href="css/master.css" rel="stylesheet" type="text/css"/>-->
         <script src="js/libs/modernizr.custom.js" type="text/javascript"></script>
         <script src="js/libs/jquery.dropdown.min.js" type="text/javascript"></script>
         <title>Scholarship</title>
@@ -71,10 +72,11 @@
                     </div>
                 </div>
             </header>
-            <div class="container">                
-                <div id="list-university" class="tab-content current">
-
-                </div>
+            <div class="container"> 
+                <div class="search-container" style="padding: 10px !important">
+                    <input type="text" data-mini="true" data-inset="true" id="search-university" class="search-class" placeholder="ស្វែងរក">                 
+                </div>                
+                <div id="list-university" class="tab-content current"></div>
                 <div id="list-majors" class="tab-content"></div>
                 <div id="list-scholarships" class="tab-content"></div>
                 <ul class="tabs">
@@ -163,7 +165,7 @@
             App.onDeviceReady();
             $(window).load(function () {
                 App.initialize();
-            });  
+            });
             $(document).on("mobileinit", function () {
                 $.support.cors = true;
                 $.mobile.allowCrossDomainPages = true;
@@ -180,6 +182,19 @@
                     $("#" + tab_id).addClass('current');
                 });
             });
+//            $(document).on("pagebeforeshow", "#page-home", function () {
+//                $("#search-container").hide();
+//            });
+//            $("#search-button").on("click", function () {
+//                $("#search-container").slideToggle("fast");
+//                $(".search-class").focus();
+//                if ($("#search-container").is(':hidden')) {
+//                    $(".search-class").focus();
+//                } else {
+//                    $(".search-class").val("");
+//                    $(".search-class").focus();
+//                }
+//            });
         </script>
     </body>
 </html>
