--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,13 @@
         <link href="css/libs/jquery.mobile-1.4.5.min.css" rel="stylesheet" type="text/css"/>
         <script src="js/libs/jquery-1.11.3.min.js" type="text/javascript"></script>
         <script src="js/libs/jquery.mobile-1.4.5.min.js" type="text/javascript"></script>
+        <script src="js/libs/persistencejs/persistence.js" type="text/javascript"></script>
+        <script src="js/libs/persistencejs/persistence.jquery.js" type="text/javascript"></script>
+        <script src="js/libs/persistencejs/persistence.store.sql.js" type="text/javascript"></script>
+        <script src="js/libs/persistencejs/persistence.store.websql.js" type="text/javascript"></script>
+        <script src="js/libs/persistencejs/persistence.sync.js" type="text/javascript"></script>        
+        <script src="js/core/db_connection.js" type="text/javascript"></script>
+        <script src="js/core/table.js" type="text/javascript"></script>
         <link href="css/libs/normalize.css" rel="stylesheet" type="text/css"/>
         <link href="css/libs/jquery.dropdown.min.css" rel="stylesheet" type="text/css"/>
         <link href="css/master.css" rel="stylesheet" type="text/css"/>
@@ -17,18 +24,59 @@
         <title>Scholarship</title>
     </head>
     <body>
+        <div data-role="page" id="page-search">
+            <header class="header-title">
+                <nav class="menu-header">
+                    <ul class="toLeft menu-header-svg" style="padding: 0; margin: 0;">
+                        <li style="margin-left: 10px !important;">
+                            <a href="#page-home" data-transition="slide">
+                                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                     width="50px" height="50px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
+                                <g>
+                                <path d="M256,112L96,240v208h112V320h96v128h112V240L256,112z"/>
+                                <path d="M256,64l-96,76.8V96H96v95.999l-32,25.499l11.51,11.384L256,84.49l180.49,144.393L448,217.498L256,64z"/>
+                                </g>
+                                </svg>
+                            </a>
+                            <!--                            <a style="margin-top: 5px !important" class="ui-btn-left ui-btn ui-icon-search ui-btn-icon-notext ui-shadow ui-corner-all">
+                                                        </a>-->
+                        </li>
+                    </ul>
+                    <h1 class="header-title h1-header toLeft">CAM SCHOLARSHIP</h1>
+<!--                    <ul class="toRight menu-header-svg" style="padding: 0; margin: 0;">
+                        <li>
+                            <a data-transition="slide" href="#page-home" style="margin-top: 5px !important" class="ui-btn-right ui-btn ui-icon-arrow-r ui-btn-icon-notext ui-shadow ui-corner-all">
+                            </a>
+                        </li>
+                    </ul>-->
+                </nav>
+            </header>   
+            <div class="container"> 
+<!--                <div style="padding: 10px !important;font-size: 18px;font-weight: none;color:rgb(67, 38, 119) ">
+                    SEARCH
+                </div>                -->
+                <div style="padding:15px !important">
+                    <input type="text" data-mini="true" data-inset="true" id="search-all" placeholder="ស្វែងរក">                 
+                </div>
+                <div id="sch-search-list"></div>
+            </div>
+        </div>
         <div data-role="page" id="page-home">
             <header class="header-title">
                 <nav class="menu-header">
                     <ul class="toLeft menu-header-svg" style="padding: 0; margin: 0;">
                         <li style="margin-left: 10px !important;">
-                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                                 width="50px" height="50px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
-                            <g>
-                            <path d="M256,112L96,240v208h112V320h96v128h112V240L256,112z"/>
-                            <path d="M256,64l-96,76.8V96H96v95.999l-32,25.499l11.51,11.384L256,84.49l180.49,144.393L448,217.498L256,64z"/>
-                            </g>
-                            </svg>
+                            <a data-transition="slide" href="#page-search" style="margin-top: 5px !important" class="ui-btn-left ui-btn ui-icon-search ui-btn-icon-notext ui-shadow ui-corner-all">
+                            </a>
+                            <!--                            <a href="#page-search" data-transition="slide">
+                                                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                                                 width="50px" height="50px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
+                                                            <g>
+                                                            <path d="M256,112L96,240v208h112V320h96v128h112V240L256,112z"/>
+                                                            <path d="M256,64l-96,76.8V96H96v95.999l-32,25.499l11.51,11.384L256,84.49l180.49,144.393L448,217.498L256,64z"/>
+                                                            </g>
+                                                            </svg>
+                                                        </a>-->
                         </li>
                     </ul>
                     <h1 id="header-title" class="header-title-h2 h1-header toLeft">សកលវិទ្យាល័យ</h1>
@@ -161,27 +209,28 @@
         <script src="js/app/controller/university_controller.js" type="text/javascript"></script>
         <script src="js/app/model/university_model.js" type="text/javascript"></script>
         <script src="js/app/view/university_view.js" type="text/javascript"></script>
+        <script src="js/app/model/majoroffline_model.js" type="text/javascript"></script>
         <script type="text/javascript">
-            App.onDeviceReady();
-            $(window).load(function () {
-                App.initialize();
-            });
-            $(document).on("mobileinit", function () {
-                $.support.cors = true;
-                $.mobile.allowCrossDomainPages = true;
-            });
-            function exitFromApp() {
-                navigator.app.exitApp();
-            }
-            $(document).ready(function () {
-                $('ul.tabs li').click(function () {
-                    var tab_id = $(this).attr('data-tab');
-                    $('ul.tabs li').removeClass('current');
-                    $('.tab-content').removeClass('current');
-                    $(this).addClass('current');
-                    $("#" + tab_id).addClass('current');
-                });
-            });
+                                        App.onDeviceReady();
+                                        $(window).load(function () {
+                                App.initialize();
+                                });
+                                        $(document).on("mobileinit", function () {
+                                $.support.cors = true;
+                                        $.mobile.allowCrossDomainPages = true;
+                                });
+                                        function exitFromApp() {
+                                        navigator.app.exitApp();
+                                        }
+                                $(document).ready(function () {
+                                $('ul.tabs li').click(function () {
+                                var tab_id = $(this).attr('data-tab');
+                                        $('ul.tabs li').removeClass('current');
+                                        $('.tab-content').removeClass('current');
+                                        $(this).addClass('current');
+                                        $("#" + tab_id).addClass('current');
+                                });
+                                });
 //            $(document).on("pagebeforeshow", "#page-home", function () {
 //                $("#search-container").hide();
 //            });
