--- a/www/index.html
+++ b/www/index.html
@@ -176,8 +176,7 @@
 
             </div>
         </div>
-        <script async defer src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false">
-        </script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
         <script src="js/libs/map.js" type="text/javascript"></script>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/core/app.js"></script>
@@ -204,26 +203,26 @@
         <script src="js/app/view/university_view.js" type="text/javascript"></script>
         <script src="js/app/model/majoroffline_model.js" type="text/javascript"></script>
         <script type="text/javascript">
-                                App.onDeviceReady();
-                                $(window).load(function () {
-                                    App.initialize();
-                                });
-                                $(document).on("mobileinit", function () {
-                                    $.support.cors = true;
-                                    $.mobile.allowCrossDomainPages = true;
-                                });
-                                function exitFromApp() {
-                                    navigator.app.exitApp();
-                                }
-                                $(document).ready(function () {
-                                    $('ul.tabs li').click(function () {
-                                        var tab_id = $(this).attr('data-tab');
-                                        $('ul.tabs li').removeClass('current');
-                                        $('.tab-content').removeClass('current');
-                                        $(this).addClass('current');
-                                        $("#" + tab_id).addClass('current');
-                                    });
-                                });
+            App.onDeviceReady();
+            $(window).load(function () {
+                App.initialize();
+            });
+            $(document).on("mobileinit", function () {
+                $.support.cors = true;
+                $.mobile.allowCrossDomainPages = true;
+            });
+            function exitFromApp() {
+                navigator.app.exitApp();
+            }
+            $(document).ready(function () {
+                $('ul.tabs li').click(function () {
+                    var tab_id = $(this).attr('data-tab');
+                    $('ul.tabs li').removeClass('current');
+                    $('.tab-content').removeClass('current');
+                    $(this).addClass('current');
+                    $("#" + tab_id).addClass('current');
+                });
+            });
         </script>
     </body>
 </html>
