--- a/www/index.html
+++ b/www/index.html
@@ -204,9 +204,9 @@
         <script src="js/app/model/majoroffline_model.js" type="text/javascript"></script>
         <script type="text/javascript">
             App.onDeviceReady();
-            $(window).load(function () {
-                App.initialize();
-            });
+//            $(window).load(function () {
+//                App.initialize();
+//            });
             $(document).on("mobileinit", function () {
                 $.support.cors = true;
                 $.mobile.allowCrossDomainPages = true;
