--- a/www/index.html
+++ b/www/index.html
@@ -40,6 +40,15 @@
                 </li>
             </ul>
             <h1 id="header-title" class="header-title-h2 h1-header toLeft">សកលវិទ្យាល័យ</h1>
+            <div class="search-wrapper">
+                <div id="sb-search" class="sb-search">
+                    <form>
+                        <input class="sb-search-input" placeholder="Search..." type="text" value="" name="search" id="search">
+                        <input class="sb-search-submit" type="submit" value="">
+                        <span class="sb-icon-search"></span>
+                    </form>
+                </div>
+            </div>
             <ul class="toRight menu-header-svg" style="padding: 0; margin: 0;">
                 <li>
                     <a href="#" data-jq-dropdown="#jq-dropdown-1">
@@ -349,6 +358,12 @@
 <script src="js/app/controller/university_controller.js" type="text/javascript"></script>
 <script src="js/app/model/university_model.js" type="text/javascript"></script>
 <script src="js/app/view/university_view.js" type="text/javascript"></script>
+
+<script src="js/libs/classie.js" type="text/javascript"></script>
+<script src="js/libs/uisearch.js" type="text/javascript"></script>
+<script>
+    new UISearch( document.getElementById( 'sb-search' ) );
+</script>
 <script type="text/javascript">
     App.onDeviceReady();
     $(document).on("mobileinit", function () {
@@ -357,7 +372,7 @@
     });
     function exitFromApp() {
         navigator.app.exitApp();
-    }
+    };
     //            $(document).on("pagebeforeshow", "#page-home", function () {
     //                $("#search-container").hide();
     //            });
